--- a/TCG_CollectionGame/appsettings.json
+++ b/TCG_CollectionGame/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TCG_CollectionGameContext": "Server=(localdb)\\mssqllocaldb;Database=TCG_CollectionGameContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
