--- a/TCG_CollectionGame/TCG_CollectionGame.csproj
+++ b/TCG_CollectionGame/TCG_CollectionGame.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="PokemonTcgSdk" Version="1.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
