--- a/TCG_CollectionGame.Test/TCG_CollectionGame.Test.csproj
+++ b/TCG_CollectionGame.Test/TCG_CollectionGame.Test.csproj
@@ -8,9 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="Moq" Version="4.17.2" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TCG_CollectionGame.Business\TCG_CollectionGame.Business.csproj" />
+    <ProjectReference Include="..\TCG_CollectionGame.entities\TCG_CollectionGame.Entities.csproj" />
   </ItemGroup>
 
 </Project>
